ReplaceStreamToListWithCollect-internal-only