@@ -27,6 +27,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.apache.maven.artifact.handler.ArtifactHandler;
 import org.apache.maven.artifact.handler.DefaultArtifactHandler;
@@ -170,14 +171,14 @@ public class RepositoryUtils {
 
         List<Exclusion> excl = Optional.ofNullable(exclusions).orElse(Collections.emptyList()).stream()
                 .map(RepositoryUtils::toExclusion)
-                .toList();
+                .collect(Collectors.toList());
         return new Dependency(result, artifact.getScope(), artifact.isOptional(), excl);
     }
 
     public static List<RemoteRepository> toRepos(List<ArtifactRepository> repos) {
         return Optional.ofNullable(repos).orElse(Collections.emptyList()).stream()
                 .map(RepositoryUtils::toRepo)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static RemoteRepository toRepo(ArtifactRepository repo) {
@@ -293,7 +294,7 @@ public class RepositoryUtils {
 
         List<Exclusion> exclusions = dependency.getExclusions().stream()
                 .map(RepositoryUtils::toExclusion)
-                .toList();
+                .collect(Collectors.toList());
 
         return new Dependency(
                 artifact,
@@ -325,7 +326,7 @@ public class RepositoryUtils {
     }
 
     public static Collection<Artifact> toArtifacts(Collection<org.apache.maven.artifact.Artifact> artifactsToConvert) {
-        return artifactsToConvert.stream().map(RepositoryUtils::toArtifact).toList();
+        return artifactsToConvert.stream().map(RepositoryUtils::toArtifact).collect(Collectors.toList());
     }
 
     public static WorkspaceRepository getWorkspace(RepositorySystemSession session) {
