@@ -23,6 +23,7 @@ import javax.inject.Singleton;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.apache.maven.project.MavenProject;
 import org.slf4j.Logger;
@@ -55,7 +56,7 @@ public class DefaultBuildResumptionAnalyzer implements BuildResumptionAnalyzer {
                 .filter(project -> result.getBuildSummary(project) == null
                         || result.getBuildSummary(project) instanceof BuildFailure)
                 .map(project -> project.getGroupId() + ":" + project.getArtifactId())
-                .toList();
+                .collect(Collectors.toList());
 
         if (remainingProjects.isEmpty()) {
             LOGGER.info("No remaining projects found, resuming the build would not make sense.");
