@@ -28,6 +28,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.maven.execution.ProjectDependencyGraph;
 import org.apache.maven.project.CycleDetectedException;
@@ -152,7 +153,7 @@ public class DefaultProjectDependencyGraph implements ProjectDependencyGraph {
         return projectIds.stream()
                 .map(projects::get)
                 .sorted(Comparator.comparingInt(order::get))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
