@@ -22,6 +22,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 class CoreUtils {
 
@@ -36,6 +37,6 @@ class CoreUtils {
     }
 
     public static <U, V> List<V> map(Collection<U> list, Function<U, V> mapper) {
-        return list.stream().map(mapper).filter(Objects::nonNull).toList();
+        return list.stream().map(mapper).filter(Objects::nonNull).collect(Collectors.toList());
     }
 }
