@@ -34,6 +34,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.api.DependencyScope;
@@ -142,7 +143,7 @@ public class DefaultLifecycleRegistry implements LifecycleRegistry {
         List<String> allPhases = graph.visitAll();
         Collections.reverse(allPhases);
         List<String> computed =
-                allPhases.stream().filter(s -> !s.startsWith("$")).toList();
+                allPhases.stream().filter(s -> !s.startsWith("$")).collect(Collectors.toList());
         return computed;
     }
 
@@ -210,7 +211,7 @@ public class DefaultLifecycleRegistry implements LifecycleRegistry {
                                 && !Lifecycle.DEFAULT.equals(id)
                                 && !Lifecycle.SITE.equals(id))
                         .map(id -> wrap(all.get(id)))
-                        .toList();
+                        .collect(Collectors.toList());
             } catch (ComponentLookupException e) {
                 throw new LookupException(e);
             }
