@@ -24,6 +24,7 @@ import javax.inject.Singleton;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.api.Lifecycle;
@@ -127,7 +128,7 @@ public class ConcurrentLifecycleStarter implements LifecycleStarter {
                         && !rootProject.getDefaultGoal().isEmpty())) {
             tasks = Stream.of(rootProject.getDefaultGoal().split("\\s+"))
                     .filter(g -> !g.isEmpty())
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         return calculateTaskSegments(session, tasks);
