@@ -505,7 +505,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 return pomFiles.stream()
                         .map(pomFile -> build(pomFile, recursive))
                         .flatMap(List::stream)
-                        .toList();
+                        .collect(Collectors.toList());
             } finally {
                 Thread.currentThread().setContextClassLoader(oldContextClassLoader);
             }
@@ -551,7 +551,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                     project.setCollectedProjects(results(r)
                             .filter(cr -> cr != r && cr.getEffectiveModel() != null)
                             .map(cr -> projectIndex.get(cr.getEffectiveModel().getId()))
-                            .toList());
+                            .collect(Collectors.toList()));
 
                     DependencyResolutionResult resolutionResult = null;
                     if (request.isResolveDependencies()) {
@@ -944,7 +944,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
     }
 
     private List<String> getProfileIds(List<Profile> profiles) {
-        return profiles.stream().map(Profile::getId).toList();
+        return profiles.stream().map(Profile::getId).collect(Collectors.toList());
     }
 
     private static ModelSource createStubModelSource(Artifact artifact) {
