@@ -257,14 +257,14 @@ public final class SettingsUtilsV4 {
         if (repos != null) {
             profile.repositories(repos.stream()
                     .map(SettingsUtilsV4::convertFromSettingsRepository)
-                    .toList());
+                    .collect(Collectors.toList()));
         }
 
         List<Repository> pluginRepos = settingsProfile.getPluginRepositories();
         if (pluginRepos != null) {
             profile.pluginRepositories(pluginRepos.stream()
                     .map(SettingsUtilsV4::convertFromSettingsRepository)
-                    .toList());
+                    .collect(Collectors.toList()));
         }
 
         org.apache.maven.api.model.Profile value = profile.build();
