@@ -20,6 +20,7 @@ package org.apache.maven.impl.model;
 
 import java.util.Iterator;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.apache.maven.api.model.Build;
 import org.apache.maven.api.model.BuildBase;
@@ -89,7 +90,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Dependency> sourceIterator = source.getDependencies().iterator();
         builder.dependencies(target.getDependencies().stream()
                 .map(d -> mergeDependency(d, sourceIterator.next(), sourceDominant, context))
-                .toList());
+                .collect(Collectors.toList()));
     }
 
     @Override
@@ -132,7 +133,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Profile> sourceIterator = source.getProfiles().iterator();
         builder.profiles(target.getProfiles().stream()
                 .map(d -> mergeProfile(d, sourceIterator.next(), sourceDominant, context))
-                .toList());
+                .collect(Collectors.toList()));
     }
 
     @Override
@@ -145,7 +146,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Dependency> sourceIterator = source.getDependencies().iterator();
         builder.dependencies(target.getDependencies().stream()
                 .map(d -> mergeDependency(d, sourceIterator.next(), sourceDominant, context))
-                .toList());
+                .collect(Collectors.toList()));
     }
 
     @Override
@@ -174,7 +175,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Dependency> sourceIterator = source.getDependencies().iterator();
         builder.dependencies(target.getDependencies().stream()
                 .map(d -> mergeDependency(d, sourceIterator.next(), sourceDominant, context))
-                .toList());
+                .collect(Collectors.toList()));
     }
 
     @Override
