@@ -22,6 +22,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.api.Constants;
@@ -184,7 +185,7 @@ public final class UserPropertiesArtifactRelocationSource implements MavenArtifa
                         }
                         return new Relocation(global, s, t);
                     })
-                    .toList();
+                    .collect(Collectors.toList());
             LOGGER.info("Parsed {} user relocations", relocationList.size());
             return new Relocations(relocationList);
         }
